fixing heading overflow

--- a/css/main.css
+++ b/css/main.css
@@ -262,7 +262,7 @@ p {
 @media only screen and (max-width: 800px) {
 
   html { font-size: 20px; }
-  h1 { font-size: 2.5em; text-align: center;}
+  h1 { font-size: 3em; text-align: center; margin-right: inherit !important;}
   h2 { font-size: 2em; }
   h3 { font-size: 1.2em; }
   h4 { font-size: 1.1em; }
@@ -441,6 +441,7 @@ nav {
   nav .nav-menu {
     display: flex;
     align-self: center;
+    padding-left: 0;
   }
   
     nav .nav-menu li {
@@ -604,8 +605,8 @@ body > footer {
 }
 
 section.hero h1 {
-  max-width: 1200px;
-  margin-right: -50vw;
+/*  max-width: 1200px;*/
+  margin-right: -25vw;
   padding-top: 1em;
 }
 
